--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejemplo</title>
+    <title>Nuevo Ejemplo</title>
 </head>
 <body>
     <h1>Hola Mundo</h1>
+    <h2>Este es un ejemplo</h2>
 </body>
 </html>
